flag and scrollbar issue fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,3 +34,10 @@ body {
     text-wrap: balance;
   }
 }
+
+@layer base {
+  html {
+    @apply scroll-smooth;
+  }
+}
+
